Fix Linux Firefox font alignment
- Swap Nimbus Sans with Liberation Sans in the font stack
- Fix alignment of radios and text in Treedip and Svingle

Ticket: https://phabricator.wikimedia.org/T377933
(cherry picked from commit a7ea28df7cb957c18bdc2ea09300c72f8a180770)

--- a/src/themes/Treedip/DonationForm/SubComponents/SelectGroupRadios.scss
+++ b/src/themes/Treedip/DonationForm/SubComponents/SelectGroupRadios.scss
@@ -6,14 +6,6 @@
 			padding: 3px 10px 0 25px;
 			cursor: pointer;
 			height: 25px;
-
-			@include breakpoints.medium-up {
-				height: 29px;
-			}
-
-			@include breakpoints.large-up {
-				height: 25px;
-			}
 		}
 
 		&-label {
